name:                button
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/noelr/button#readme
license:             BSD3
license-file:        LICENSE
author:              Noel Rohrbach
maintainer:          noel@noelr.ch
copyright:           Copyright: (c) 2017 Noel Rohrbach
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable button
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , bytestring
                     , filepath
                     , text
                     , wai-extra
                     , wai-middleware-static
